--- a/k8s/Deployment.yaml
+++ b/k8s/Deployment.yaml
@@ -27,12 +27,12 @@ spec:
           livenessProbe:
             httpGet:
               path: /healthz
-              port: http
+              port: 8000
             initialDelaySeconds: 3
             periodSeconds: 3
           readinessProbe:
             httpGet:
               path: /healthz
-              port: http
+              port: 8000
             initialDelaySeconds: 5
             periodSeconds: 5
