Added user controller

--- a/LotusWebApp.Service/appsettings.json
+++ b/LotusWebApp.Service/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://0.0.0.0:8000"
+  "Urls": "http://0.0.0.0:8000",
+  "ConnectionStrings": {
+    "db.lotus": "User ID=lotus;Password=lotus;Server=localhost;Port=7432;Database=lotus;Pooling=true;Maximum Pool Size=100;"
+  }
 }
