--- a/helm/lotus/values.yaml
+++ b/helm/lotus/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 3
+replicaCount: 1
 
 image:
   repository: emptyparam/lotus
@@ -25,7 +25,9 @@ serviceAccount:
   name: ""
 
 podAnnotations: {}
-podLabels: {}
+podLabels: {
+   app: lotus
+}
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -41,6 +43,11 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 8000
+  portName: lotus
+
+metrics:
+  serviceMonitor:
+    enabled: true
 
 strategy:
   type: RollingUpdate
@@ -58,6 +65,8 @@ ingress:
         - path: /health
           pathType: Prefix
         - path: /user
+          pathType: Prefix
+        - path: /User
           pathType: Prefix
         - path: /swagger
           pathType: Prefix
