--- a/LotusWebApp.Service/appsettings.json
+++ b/LotusWebApp.Service/appsettings.json
@@ -9,5 +9,11 @@
   "Urls": "http://0.0.0.0:8000",
   "ConnectionStrings": {
     "db.lotus": "User ID=lotus;Password=lotus;Server=localhost;Port=7432;Database=lotus;Pooling=true;Maximum Pool Size=100;"
+  },
+  "JwtTokenSettings": {
+    "ValidIssuer": "ExampleIssuer",
+    "ValidAudience": "ValidAudience",
+    "SymmetricSecurityKey": "fvh8456477hth44j6wfds98bq9hp8bqh9ubq9gjig3qr0[94vj5",
+    "JwtRegisteredClaimNamesSub": "345h098bb8reberbwr4vvb8945"
   }
 }
