Backend for frontends. Apigateway // ДЗ

--- a/helm/lotus/values.yaml
+++ b/helm/lotus/values.yaml
@@ -72,6 +72,10 @@ ingress:
           pathType: Prefix
         - path: /metrics
           pathType: Prefix
+        - path: /profile
+          pathType: Prefix
+        - path: /page
+          pathType: Prefix
   tls: []
 
 resources: {}
