--- a/LotusWebApp.Service/appsettings.json
+++ b/LotusWebApp.Service/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "Urls": "http://0.0.0.0:8000",
   "ConnectionStrings": {
-    "db.lotus": "User ID=lotus;Password=lotus;Server=localhost;Port=7432;Database=lotus;Pooling=true;Maximum Pool Size=100;"
+    "db.lotus": "User ID=lotus;Password=lotus;Server=localhost;Port=7432;Database=lotus;Pooling=true;Maximum Pool Size=100;",
+    "kafka.lotus": "localhost:9092"
   },
   "JwtTokenSettings": {
     "ValidIssuer": "ExampleIssuer",
