--- a/LotusWebApp.Service/LotusWebApp.Service.csproj
+++ b/LotusWebApp.Service/LotusWebApp.Service.csproj
@@ -22,6 +22,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
         <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.8.0-rc.1" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.0" />
