Дз 08. Распределенные транзакции

--- a/LotusWebApp.Service/appsettings.json
+++ b/LotusWebApp.Service/appsettings.json
@@ -16,5 +16,22 @@
     "ValidAudience": "ValidAudience",
     "SymmetricSecurityKey": "fvh8456477hth44j6wfds98bq9hp8bqh9ubq9gjig3qr0[94vj5",
     "JwtRegisteredClaimNamesSub": "345h098bb8reberbwr4vvb8945"
+  },
+  "KafkaOptions": {
+    "ConsumerGroup": "CustomerValidationEngine.Group",
+    "Topics": {
+      "OrderManagementSystemRequest": "ORDER_MANAGEMENT_SYSTEM.REQUEST",
+      "OrderManagementSystemResponse": "ORDER_MANAGEMENT_SYSTEM.RESPONSE",
+      "StockValidationEngineRequest": "STOCK_VALIDATION_ENGINE.REQUEST",
+      "StockValidationEngineResponse": "STOCK_VALIDATION_ENGINE.RESPONSE",
+      "BillingValidationEngineRequest": "BILLING_VALIDATION_ENGINE.REQUEST",
+      "BillingValidationEngineResponse": "BILLING_VALIDATION_ENGINE.RESPONSE",
+      "DeliveryValidationEngineRequest": "DELIVERY_VALIDATION_ENGINE.REQUEST",
+      "DeliveryValidationEngineResponse": "DELIVERY_VALIDATION_ENGINE.RESPONSE",
+      "Error": "ERROR"
+    },
+    "ClientConfig": {
+      "BootstrapServers": "localhost:9092"
+    }
   }
 }
