--- a/LotusWebApp.Data/LotusWebApp.Data.csproj
+++ b/LotusWebApp.Data/LotusWebApp.Data.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.4.0" />
+      <PackageReference Include="MassTransit.Abstractions" Version="8.2.2" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
