--- a/LotusWebApp.Service/LotusWebApp.Service.csproj
+++ b/LotusWebApp.Service/LotusWebApp.Service.csproj
@@ -11,6 +11,11 @@
     <ItemGroup>
         <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
         <PackageReference Include="Confluent.Kafka" Version="2.4.0" />
+        <PackageReference Include="MassTransit" Version="8.2.2" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+        <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.2.2" />
+        <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+        <PackageReference Include="MassTransit.Kafka" Version="8.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
@@ -36,6 +41,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Metrics\" />
+      <Folder Include="Extensions\" />
     </ItemGroup>
 </Project>
