--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -16,8 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - linux/amd64
-          - linux/x86_64
+          - linux/arm64
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
