--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - linux/amd64
+          - linux/arm64/v8
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
