--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -37,6 +37,6 @@ jobs:
           context: "{{defaultContext}}"
           push: true
           tags: emptyparam/lotus:latest
-          platforms: linux/arm64/v8
+          platforms: linux/amd64,linux/arm64
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.GH_TOKEN }}
