--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -11,18 +11,20 @@ env:
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
-    runs-on: ${{ matrix.builder }}
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        include:
-          - builder: ubuntu-latest
-            platform: linux/amd64
+        platforms:
+          - platform: linux/amd64
             tag: amd64
-          - builder: buildjet-8vcpu-ubuntu-2204-arm
-            platform: linux/arm64
+          - platform: linux/arm64
             tag: arm64
     steps:
+      - name: Prepare
+        run: |
+          platform=${{ matrix.platforms.platform }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: Check out the repo
         uses: actions/checkout@v3
 
@@ -42,11 +44,11 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: "{{defaultContext}}"
-          platforms: ${{ matrix.platform }}
+          platforms: ${{ matrix.platforms.platform }}
           push: true
-          tags: emptyparam/lotus:${{ matrix.tag }}-latest
+          tags: emptyparam/lotus:${{ matrix.platforms.tag }}-latest
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.GH_TOKEN }}
