--- a/helm/kafka/kafka-deployment.yaml
+++ b/helm/kafka/kafka-deployment.yaml
@@ -40,9 +40,11 @@ kind: Service
 metadata:
   name: kafka-service
 spec:
+  type: NodePort
   selector:
     app: kafka
   ports:
-    - protocol: TCP
+    - name: kafka
+      protocol: TCP
       port: 9092
       targetPort: 9092
